# meta-ad-library-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  smoke.py
meta_ads_mcp/: browser.py  parse.py  server.py
meta_ads_mcp/fixtures/: ad_details_sample.json
meta_ads_mcp/tests/: test_parse.py
spike/: probe.py
