[project]
name = "meta-ads-mcp"
version = "0.1.0"
description = "MCP server: search the Meta Ad Library + fetch EU reach via real-browser scraping"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.44",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
meta-ads-mcp = "meta_ads_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meta_ads_mcp"]
